--- a/chart_fe/package.json
+++ b/chart_fe/package.json
@@ -9,7 +9,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-google-charts": "^4.0.0",
+    "bootstrap": "^5.2.3",
+    "chart.js": "^4.2.1",
+    "react-chartjs-2": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
